<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_bottomnavigation">bottomnavigation</string>
    <string name="main">main</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Profile</string>
    <string name="title_notifications">Buscar</string>
    <string name="title_play">Play</string>
    <string name="login">Login</string>

    <string name="la_mejor_seleccion">Las mejores selecciones</string>
    <string name="titulomenu">The Queen Gambit</string>
    <string name="titulomenuespañol">Gambito de dama</string>
    <string name="descripcion">The queens Gambit (titulo original) \n Miniserie de TV 2020-2020 16</string>
    <string name="drama">Drama</string>
    <string name="calificacion">5.0</string>


    <string name="trialer">Trailer Oficial</string>
    <string name="listaseguimientotesxto">Crea una lista de seguimiento para no perderte ninguna pelicula o sere de tv</string>
    <string name="botonperfiltexto">Empieza tu lista de seguimiento</string>
    <string name="perfilname">Messirve</string>
    <string name="descriptionpeliinside">Ambientada en la Guerra Fria; una huérfana llamada Beth Harmon con un don para el ajedrez lucha contras las adicciones mientras...</string>
    <string name="giaepisodios">Guia de episodios</string>
    <string name="episodes">7 Episodeos ></string>
    <string name="botoninside">Agregar a mi lista de seguimiento </string>


    <string name="usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="olvidocontraseña">¿Olvidaste la contraseña?</string>
    <string name="ingresacon">Ó podes ingresar con</string>
    <string name="notienescuenta">¿No tienes cuenta?</string>
    <string name="registrate">Regístrate</string>
    <string name="continuarcomoinvitado">Continuar como invitado</string>
    <string name="btnlogin">Login</string>

    <string name="Crearcuenta">Crear una cuenta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>